--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,8 @@
 eclipse.preferences.version=1
 encoding//Debug/Libraries/subdir_rules.mk=UTF-8
 encoding//Debug/Libraries/subdir_vars.mk=UTF-8
+encoding//Debug/Utilities/subdir_rules.mk=UTF-8
+encoding//Debug/Utilities/subdir_vars.mk=UTF-8
 encoding//Debug/drivers/subdir_rules.mk=UTF-8
 encoding//Debug/drivers/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
