--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//Debug/App/subdir_rules.mk=UTF-8
+encoding//Debug/App/subdir_vars.mk=UTF-8
 encoding//Debug/Libraries/subdir_rules.mk=UTF-8
 encoding//Debug/Libraries/subdir_vars.mk=UTF-8
 encoding//Debug/Utilities/subdir_rules.mk=UTF-8
